[package]
name = "movable-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"
dhat = "0.3.2"

[[bench]]
name = "preserve_all_history"
harness = false

[[bench]]
name = "apply_ops"
harness = false
