[package]
name = "movable-tree-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.movable-tree]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "mov"
path = "fuzz_targets/mov.rs"
test = false
doc = false

[[bin]]
name = "mov_undo"
path = "fuzz_targets/mov_undo.rs"
test = false
doc = false
